# hyprconf2lua

./: .gitignore  LICENSE  README.md  hyprconf2lua.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
example/: hyprland.conf
src/hyprconf2lua/: __main__.py  ast.py  cli.py  codegen.py  converter.py  lexer.py  mappings.py  parser.py
tests/: test_converter.py
