[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprconf2lua"
version = "1.3.2"
description = "Convert Hyprland hyprlang .conf files to Lua .lua config format (v0.55+)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "hyprconf2lua contributors"}
]
requires-python = ">=3.10"
keywords = ["hyprland", "hyprlang", "lua", "config", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Prateek-squadron/hyprconf2lua"
Repository = "https://github.com/Prateek-squadron/hyprconf2lua"

[project.scripts]
hyprconf2lua = "hyprconf2lua.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
